[package]
name = "cloudflared"
version = "0.0.3"
edition = "2021"
authors = ["Georges KABBOUCHI <georges.kabbouchi@gmail.com>"]
keywords = ["cloudflare", "cloudflared", "argo-tunnel", "tunnel"]
license = "MIT OR Apache-2.0"
description = "Cloudflare Tunnel client"
readme = "README.md"
repository = "https://github.com/KABBOUCHI/cloudflared"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
